[bandaid] Let issue banner scroll out of view in console
It has been reported by users through multiple channels that the
"issues detected" message is obtrusive and disrupting the debugging
workflow. This is a back-mergable fix that lets the "issues detected"
message scroll out of view. This shoud fix the behavior for M85,
and opens the way for reworking this for M86.

This additionally fixes the ugly alignment of the "Go to issues" button,
which causes the issues banner to become especially large if DevTools
is opened on small widths.

Screenshot: https://imgur.com/a/ny69asC
Bug: chromium:1096481

--- a/front_end/ui/infobar.css
+++ b/front_end/ui/infobar.css
@@ -27,11 +27,19 @@
   background-color: rgb(255 255 255);
 }
 
+.infobar.infobar-issue {
+  font-family: sans-serif;
+}
+
 .infobar-main-row {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   min-height: 25px;
+}
+
+.infobar.infobar-issue .infobar-main-row {
+  flex-direction: row;
 }
 
 .infobar-info-container {
@@ -44,6 +52,10 @@
 .infobar-info-message {
   display: flex;
   margin: 5px 0;
+}
+
+.infobar.infobar-issue .infobar-info-message {
+  flex: 1 0;
 }
 
 .infobar-info-text {
